--- a/spring-react/src/frontend/src/index.css
+++ b/spring-react/src/frontend/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(240, 240, 240, 0.9);
+  height: 5em;
+  padding: 1em;
+}
